opam-version: "1.2"
name: "ocamlparse"
version: "~unknown"
maintainer: "TuringDisciple <mncubenashe@gmail.com>"
authors: "TuringDisciple <mncubenashe@gmail.com>"
homepage: ""
bug-reports: ""
license: ""
dev-repo: "https://www.github.com/TuringDisciple/bus"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "ocamlparse"]
depends: [
  "ocamlfind" {build}
]
